# etype

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
assets/code/: bash.txt  python.txt  rust.txt
assets/sentences/: quotes.txt
assets/words/: easy.txt  hard.txt  insane.txt  medium.txt
docs/: README.md
docs/architecture/: database.md  stack.md  structure.md
docs/design/: game-modes.md  overview.md  progression.md
docs/dev/: DEVDOC.md  packaging-progress.md  packaging.md  phases.md
docs/ui/: screens.md
src/: app.rs  game.rs  lib.rs  main.rs
src/content/: code.rs  mod.rs  sentences.rs  words.rs
src/db/: mod.rs
src/engine/: finger.rs  mod.rs  scorer.rs  timer.rs  xp.rs
src/modes/: code_snippet.rs  mod.rs  sentence.rs  survival.rs  word_rush.rs
src/ui/: finger_guide.rs  game.rs  heatmap.rs  help.rs  menu.rs  mod.rs  results.rs  stats.rs
tests/: db.rs
